--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		<dependency>
+	   	<groupId>org.springframework.data</groupId>
+	   		<artifactId>spring-data-jpa</artifactId>
+		   	<version>LATEST</version>
+		</dependency>
+		
 	</dependencies>  
 </project>
