--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
 	   		<artifactId>spring-data-jpa</artifactId>
 		   	<version>LATEST</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>LATEST</version>
+		</dependency>
+				
 	</dependencies>  
 </project>
