--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,30 @@
   <artifactId>CarManagement</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>CarManagement</name>
+  <packaging>war</packaging>
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
+  <finalName>CarManagement</finalName>
+   <sourceDirectory>src</sourceDirectory>
+   <plugins>
+     <plugin>
+       <artifactId>maven-compiler-plugin</artifactId>
+       <version>3.1</version>
+       <configuration>
+         <source>1.8</source>
+         <target>1.8</target>
+       </configuration>
+     </plugin>
+	<plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8088/manager/text</url>
+			<server>myserver</server>
+			<!-- <username>tomcat</username> <password>tomcat</password> -->
+		</configuration>
+	</plugin>      
+  </plugins>
   </build>
 	<dependencies>
 		<dependency>
@@ -58,6 +70,28 @@
 			<artifactId>spring-test</artifactId>
 			<version>LATEST</version>
 		</dependency>
-				
+			
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>LATEST</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>LATEST</version>
+		</dependency>
 	</dependencies>  
 </project>
