--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
 			<version>LATEST</version>
 		</dependency>
 		<dependency>
-	   	<groupId>org.springframework.data</groupId>
-	   		<artifactId>spring-data-jpa</artifactId>
-		   	<version>LATEST</version>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.7.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
