--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,21 @@
 			<artifactId>spring-core</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>LATEST</version>
+		</dependency>
 	</dependencies>  
 </project>
