--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,25 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		
+		<!-- AOP -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>LATEST</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>LATEST</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>LATEST</version>
+		</dependency>
+		
 	</dependencies>  
 </project>
