--- a/pom.xml
+++ b/pom.xml
@@ -101,17 +101,16 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>LATEST</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>LATEST</version>
+			<version>3.2.8.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>LATEST</version>
+			<version>3.2.8.RELEASE</version>
 		</dependency>
 		
 		<!-- AOP -->
@@ -134,4 +133,13 @@
 		</dependency>
 		
 	</dependencies>  
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>3.2.8.RELEASE</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
